# cue

./: .gitignore
backend/: agents.py  api.py  clock.py  cognition.py  engine.py  memory.py  pyproject.toml  scheduler.py  spatial.py
data/: agents.json
frontend/: bun.lockb  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/graph/: page.tsx
frontend/app/map/: page.tsx
frontend/app/output/: page.tsx
frontend/components/: AgentModal.tsx  EventInjector.tsx  GraphCanvas.tsx  LiveFeed.tsx  SentimentChart.tsx  Sidebar.tsx  TopBar.tsx  TopNav.tsx
frontend/components/graph/: D3ForceGraph.tsx
frontend/lib/: mockData.ts  types.ts
frontend/public/avatars/: manifest.json
